Fix layout bugs in valuelist editor modal

--- a/desktop/src/app/components/configuration/editor/valuelist-editor-modal.scss
+++ b/desktop/src/app/components/configuration/editor/valuelist-editor-modal.scss
@@ -4,14 +4,14 @@
       transition: transform 350ms cubic-bezier(0, 0, 0.2, 1);
     }
   
-    &.cdk-drop-list-dragging .value-item:not(.cdk-drag-placeholder) {
+    &.cdk-drop-list-dragging .value-item-container:not(.cdk-drag-placeholder) {
       transition: transform 350ms cubic-bezier(0, 0, 0.2, 1);
     }
 
-    .value-items {
+    .value-item-container {
       margin-bottom: 0.5rem !important;
 
-      &.hidden-value {
+      .hidden-value {
         color: #ccc;
 
         code {
